# StateMachineWithThreads

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake_clang.yml  cmake_ubuntu.yml  cmake_windows.yml
AsyncCallback/: AsyncCallback.h  AsyncCallbackBase.cpp  AsyncCallbackBase.h  CMakeLists.txt  Callback.h  CallbackMsg.h  CallbackThread.h
PortWin/: CMakeLists.txt  LockGuard.cpp  LockGuard.h  ThreadMsg.h  ThreadWin.cpp  ThreadWin.h  Timer.cpp  Timer.h  UserMsgs.h  WorkerThreadStd.cpp  WorkerThreadStd.h
SelfTest/: CMakeLists.txt  CentrifugeTest.cpp  CentrifugeTest.h  PressureTest.cpp  PressureTest.h  SelfTest.cpp  SelfTest.h  SelfTestEngine.cpp  SelfTestEngine.h
StateMachine/: CMakeLists.txt  StateMachine.cpp  StateMachine.h
Util/: CMakeLists.txt  Fault.cpp  Fault.h  WorkerThread.cpp  WorkerThread.h
VS2008/: VS2008.sln
VS2008/VS2008/: VS2008.vcproj
VS2015/: VS2015.sln
VS2015/VS2015/: VS2015.vcxproj  VS2015.vcxproj.filters
